--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=catedra
+application.vendor=jabes
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,12 +27,15 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/catedra.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
+file.reference.log4j-1.2.17.jar=C:\\Users\\jabes\\Desktop\\log4j-1.2.17.jar\\log4j-1.2.17.jar
 file.reference.mysql-connector-j-8.2.0.jar=C:\\Users\\jabes\\Desktop\\POO\\conectorjavamysql\\mysql-connector-j-8.2.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-j-8.2.0.jar}
+    ${file.reference.mysql-connector-j-8.2.0.jar}:\
+    ${file.reference.log4j-1.2.17.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -73,4 +77,5 @@ run.test.classpath=\
     ${build.test.classes.dir}
 source.encoding=UTF-8
 src.dir=src
+src.logConfig.dir=logConfig
 test.src.dir=test
